--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,11 @@
-<h1>Sample App</h1>
-<p>
-  This will be the RailsTutorial sample app!
-</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This will be the <%= link_to "RailsTutorial", 'http://railstutorial.org' %> sample app!
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class:"btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
