--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,11 @@
 @import "bootstrap";
 
-/* define variables */
+/* define variables/mixins */
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 /****/
 
 /* universal */
@@ -24,13 +29,14 @@ textarea {
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
-h1 {
+.container > h1 {
+  font-weight: bold;
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
 }
-h2 {
+.container > h2 {
   font-size: 1.7em;
   letter-spacing: -1px;
   margin-bottom: 30px;
@@ -87,6 +93,71 @@ footer {
       margin-left: 10px;
     }
   }
+}
+
+/* sidebar */
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid $gray-lighter;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.8em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+      font-weight: bold;
+      img {
+        float: left;
+        margin-right: 0.7em;
+      }
+    }
+  }
+}
+
+/* forms */
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  @include box_sizing;
+  border-radius: 5px;
+}
+
+input {
+  height: auto;
+}
+
+/* form errors */
+.panel-danger .panel-body ul {
+  padding-left: 2em;
+  color: #c00;
+}
+.field_with_errors {
+  color: #c00;
+  input {
+    color: inherit;
+    border-color: #b94a48;
+  }
+}
+
+/* miscellaneous */
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
 
 
