--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -125,6 +125,10 @@ aside {
 }
 
 /* forms */
+form {
+  margin-bottom: 1.5em;
+}
+
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
