--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -156,6 +156,21 @@ input {
   }
 }
 
+/* users index */
+.users {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-top: 1px solid $gray-lighter;
+    &:last-child {
+      border-bottom: 1px solid $gray-lighter;
+    }
+  }
+}
+
 /* miscellaneous */
 .debug_dump {
   clear: both;
