--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -171,6 +171,34 @@ input {
   }
 }
 
+/* microposts */
+.microposts {
+  list-style: none;
+  margin: 10px 0 0 0;
+  padding: 0;
+  
+  li {
+    padding: 10px 0;
+    border-top: 1px solid $gray-lighter;
+  }
+}
+.content {
+  display: block;
+}
+.timestamp {
+  color: $gray-light;
+}
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
 /* miscellaneous */
 .debug_dump {
   clear: both;
