--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,13 @@
       </h1>
     </section>
   </aside>
+  <section class="col-sm-8">
+    <% if @user.microposts.any? %>
+    <h3>Microposts: This dawg wrote <%= @user.microposts.count %> of them</h3>
+    <ol class="microposts">
+      <%= render @microposts %>
+    </ol>
+    <%= will_paginate @microposts %>
+    <% end %>
+  </section>
 </div>
