--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,28 @@
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="col-sm-4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-sm-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
+  <div class="center jumbotron">
+    <h1>Welcome to the Sample App</h1>
 
-  <h2>
-    This will be the <%= link_to "RailsTutorial", 'http://railstutorial.org' %> sample app!
-  </h2>
+    <h2>
+      This will be the <%= link_to "RailsTutorial", 'http://railstutorial.org' %> sample app!
+    </h2>
 
-  <%= link_to "Sign up now!", signup_path, class:"btn btn-lg btn-primary" %>
-</div>
+    <%= link_to "Sign up now!", signup_path, class:"btn btn-lg btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org' %>
+<% end %>
