--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -182,17 +182,24 @@ input {
   li {
     padding: 10px 0;
     border-top: 1px solid $gray-lighter;
+    margin-left: 57px;
+
+    .gravatar {
+      margin-left: -57px;
+      margin-right: 0;
+    }
   }
 }
 .content {
   display: block;
+  word-wrap: break-word;
 }
 .timestamp {
   color: $gray-light;
 }
 .gravatar {
   float: left;
-  margin-right: 10px;
+  margin-right: 10px
 }
 aside {
   textarea {
