--- a/app/views/microposts/_feed_item.html.erb
+++ b/app/views/microposts/_feed_item.html.erb
@@ -5,5 +5,5 @@
   <span class="timestamp">
     Posted <%= time_ago_in_words(feed_item.created_at) %> ago
   </span>
-  <%= render 'shared/delete_item', item: feed_item %>
+  <%= render 'microposts/delete_item', item: feed_item %>
 </li>
