--- a/app/views/static_pages/_home_signedin.html.erb
+++ b/app/views/static_pages/_home_signedin.html.erb
@@ -4,11 +4,11 @@
       <%= render 'shared/user_info' %>
     </section>
     <section>
-      <%= render 'shared/micropost_form' %>
+      <%= render 'microposts/micropost_form' %>
     </section>
   </aside>
   <div class="col-sm-8">
     <h3>Micropost Feed</h3>
-    <%= render 'shared/feed' %>
+    <%= render 'microposts/feed' %>
   </div>
 </div>
