--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -182,6 +182,9 @@ input {
   li {
     padding: 10px 0;
     border-top: 1px solid $gray-lighter;
+  }
+
+  li[id] {
     margin-left: 57px;
 
     .gravatar {
@@ -206,6 +209,10 @@ aside {
     height: 100px;
     margin-bottom: 10px;
   }
+}
+#remaining-chars {
+  float: right;
+  font-weight: bold;
 }
 
 /* miscellaneous */
