--- a/app/views/static_pages/_home_signedin.html.erb
+++ b/app/views/static_pages/_home_signedin.html.erb
@@ -4,6 +4,9 @@
       <%= render 'shared/user_info' %>
     </section>
     <section>
+      <%= render 'users/stats' %>
+    </section>
+    <section>
       <%= render 'microposts/micropost_form' %>
     </section>
   </aside>
