--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,12 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <%= render 'users/stats' %>
+    </section>
   </aside>
-  <section class="col-sm-8">
+  <div class="col-sm-8">
+    <%= render 'users/follow_form' if signed_in? %>
     <% if @user.microposts.any? %>
     <h3>Microposts: This dawg wrote <%= @user.microposts.count %> of them</h3>
     <ol class="microposts">
@@ -16,5 +20,5 @@
     </ol>
     <%= will_paginate @microposts %>
     <% end %>
-  </section>
+  </div>
 </div>
